--- a/assignment/index.html
+++ b/assignment/index.html
@@ -12,6 +12,8 @@
       <h2>Check the console...</h2>
     </header>
     <!-- create an ordered list with any questions you have on this week's material -->
-
+    <ol>
+      <li>Confused about the last stretch problem. Will try it again this week.</li>
+    </ol>
   </body>
 </html>
